add the parent div

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ html {
   background-color: rgb(44, 44, 44);
   overflow: hidden;
 }
+.screen{
+  display: flex;
+  justify-content: center;
+}
 .window {
   position: relative;
   background: #504d4d;
